Add mongo and community detail

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,6 @@
 html, body, #root {
   height: 100%;
 }
+
+tr:nth-child(even) {background: rgb(240, 240, 240)}
+tr:nth-child(odd) {background: rgb(255, 255, 255)}
